--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,39 @@ footer, header, hgroup, menu, nav, section {
 .btn-warning{
 	background-color: #f59125 !important;
 }
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+	color: lightgray;
+	opacity: 1; /* Firefox */
+  }
+.industryBG{
+	background-image: url('../../images/industry.jpeg');
+	background-size: cover;
+	background-position-x: center;
+}
+.footerbg{
+	background-image: url('../../images/footer-bg2.jpeg');
+	background-size: cover;
+	background-position-x: center;
+}
+ .cv-upload-center{
+	margin: auto;
+    width: 50%;
+    padding: 10px;
+ }           
+.industryUl li {
+	list-style: none;
+	position: relative;
+	padding: 3px 0 2px 25px;
+  }
+  
+.industryUl li::before {
+	content: '*';
+	position: absolute;
+	top: 6px;
+	left: 0;
+  }
+	
+
 .service-bg
 {
 	background-color: #ffde7b !important;
@@ -195,7 +228,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #f2849e !important;
+			color: #000 !important;
 			text-decoration: none;
 		}
 
@@ -1894,8 +1927,8 @@ input, select, textarea {
 			}
 
 			.icon.style2:hover {
-				color: #f2849e;
-				border-color: #f2849e;
+				color: #000;
+				border-color: #000;
 			}
 
 			.icon.style2:active {
@@ -2530,8 +2563,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #f2849e !important;
-			box-shadow: inset 0 0 0 2px #f2849e;
+			color: #000 !important;
+			box-shadow: inset 0 0 0 2px #000;
 		}
 
 		input[type="submit"]:active,
@@ -2573,7 +2606,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #f2849e;
+				background-color: #000;
 			}
 
 			input[type="submit"].primary:active,
@@ -2581,7 +2614,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #ee5f81;
+				background-color: #000;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
